src/objects/ACCL__Promotion_Template_Hierarchy__c.object
<CustomObject>
    <description>Object for the creation of promotion hierarchies.</description>
    <fields>
        <fullName>ACCL__Child_Promotion_Template__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to a promotion template.</description>
        <label>Child Promotion Template</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ACCL__Promotion_Template__c.ACCL__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ACCL__Promotion_Template__c</referenceTo>
        <relationshipLabel>Parent Promotion Templates</relationshipLabel>
        <relationshipName>Parent_Promotion_Templates</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Copied_Components__c</fullName>
        <label>Copied Components</label>
        <picklist>
            <picklistValues>
                <fullName>Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tactics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Notes</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>ACCL__Parent_Promotion_Template__c</fullName>
        <description>Master-Detail relation to a promotion template.</description>
        <label>Parent Promotion Template</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ACCL__Promotion_Template__c.ACCL__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ACCL__Promotion_Template__c</referenceTo>
        <relationshipLabel>Child Promotion Templates</relationshipLabel>
        <relationshipName>Child_Promotion_Templates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ACCL__Record_Link__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;Id, $Label.ACCL__RECORD_LINK, &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UL_Usage__c</fullName>
        <label>Usage</label>
        <picklist>
            <picklistValues>
                <fullName>Push</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Derive</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Promotion Template Hierarchy</label>
    <nameField>
        <displayFormat>PTH-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotion Template Hierarchies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ACCL__Sales_Org_Mismatch</fullName>
        <active>true</active>
        <description>To validate that parent and child Promotion templates have same sales org</description>
        <errorConditionFormula>TEXT(ACCL__Child_Promotion_Template__r.ACCL__Sales_Org__c) &lt;&gt; TEXT(ACCL__Parent_Promotion_Template__r.ACCL__Sales_Org__c)</errorConditionFormula>
        <errorMessage>Sales org of parent and child Promotion Templates should be same.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Sales_Org_Mismatch1</fullName>
        <active>true</active>
        <description>To validate that parent and child Promotion templates have same sales org</description>
        <errorConditionFormula>TEXT(ACCL__Child_Promotion_Template__r.ACCL__Sales_Org__c) &lt;&gt; TEXT(ACCL__Parent_Promotion_Template__r.ACCL__Sales_Org__c)</errorConditionFormula>
        <errorMessage>Sales org of parent and child Promotion Templates should be same.</errorMessage>
    </validationRules>
</CustomObject>